--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "yash",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
+    "dotenv": "^16.0.3",
     "slackbots": "^1.3.0"
   }
 }
