--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "slackbots": "^1.3.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.0.4"
   }
 }
