--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node-dev --respawn index.ts"
   },
   "author": "yash",
   "license": "ISC",
   "dependencies": {
+    "@slack/bolt": "^3.13.1",
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "slackbots": "^1.3.0"
   },
   "devDependencies": {
+    "@types/node": "^20.1.0",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
   }
 }
